--- a/HTML/Tuan01/BT09.html
+++ b/HTML/Tuan01/BT09.html
@@ -3,21 +3,28 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Bai 9</title>
-    <link rel="stylesheet" type="text/css" href="bai9.css">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="Document.css">
 </head>
+
+<style>
+        #hang{
+            background-color: rgb(255, 243, 106)
+        }
+
+</style>
 
 <body>
     
 </body>
     <div id="content" class="container">
-        <table cellpadding="5" cellspacing="0">
+        <table border="4" bordercolor="#eeb422" cellpadding="5" cellspacing="0" style="color: rgb(1, 111, 38);">
             <tr class="tieude" id="hang-tieude">
-                <th id="hang-td1">Character</th>
-                <th id="hang-td2">HTML<br>Code</th>
-                <th id="hang-td3">Character<br>Code</th>
-                <th id="hang-td4">Description of Character</th>
-                <tr class="hang" id="hang">
+                <th id="hang-td1" style="background-color: aqua;"">Character</th>
+                <th id="hang-td2" style="background-color: aqua;">HTML<br>Code</th>
+                <th id="hang-td3" style="background-color: aqua;">Character<br>Code</th>
+                <th id="hang-td4" style="background-color: aqua;">Description of Character</th>
+                <tr class="hang" id="hang" >
                     <td>&#140;</td>
                     <td>&#38;&#35;140;</td>
                     <td></td>
