--- a/HTML/Tuan01/BT09.html
+++ b/HTML/Tuan01/BT09.html
@@ -150,6 +150,13 @@
                     <td>&#38;yen;</td>
                     <td>yen sign</td>
                 </tr>
+                <table border="4" bordercolor="#eeb422" margin="20" cellpadding="5" cellspacing="0" style="color: rgb(1, 111, 38);">
+                    <tr class="tieude" id="hang-tieude">
+                        <th id="hang-td1" style="background-color: aqua;"">Character</th>
+                        <th id="hang-td2" style="background-color: aqua;">HTML<br>Code</th>
+                        <th id="hang-td3" style="background-color: aqua;">Character<br>Code</th>
+                        <th id="hang-td4" style="background-color: aqua;">Description of Character</th>
+
                 <tr class="hang" id="hang">
                     <td>&#09;</td>
                     <td>&#38;&#35;09;</td>
