--- a/HTML/Tuan01/BT09.html
+++ b/HTML/Tuan01/BT09.html
@@ -9,7 +9,7 @@
 
 <style>
         #hang{
-            background-color: rgb(255, 243, 106)
+            background-color: #feff99
         }
 
 </style>
@@ -20,10 +20,10 @@
     <div id="content" class="container">
         <table border="4" bordercolor="#eeb422" cellpadding="5" cellspacing="0" style="color: rgb(1, 111, 38);">
             <tr class="tieude" id="hang-tieude">
-                <th id="hang-td1" style="background-color: aqua;"">Character</th>
-                <th id="hang-td2" style="background-color: aqua;">HTML<br>Code</th>
-                <th id="hang-td3" style="background-color: aqua;">Character<br>Code</th>
-                <th id="hang-td4" style="background-color: aqua;">Description of Character</th>
+                <th id="hang-td1" style="background-color: #8fffff"">Character</th>
+                <th id="hang-td2" style="background-color: #8fffff;">HTML<br>Code</th>
+                <th id="hang-td3" style="background-color: #8fffff;">Character<br>Code</th>
+                <th id="hang-td4" style="background-color: #8fffff;">Description of Character</th>
                 <tr class="hang" id="hang" >
                     <td>&#140;</td>
                     <td>&#38;&#35;140;</td>
@@ -150,6 +150,8 @@
                     <td>&#38;yen;</td>
                     <td>yen sign</td>
                 </tr>
+                </table>
+                <br>
                 <table border="4" bordercolor="#eeb422" margin="20" cellpadding="5" cellspacing="0" style="color: rgb(1, 111, 38);">
                     <tr class="tieude" id="hang-tieude">
                         <th id="hang-td1" style="background-color: aqua;"">Character</th>
