--- a/HTML/Tuan02/Bai14.html
+++ b/HTML/Tuan02/Bai14.html
@@ -22,14 +22,16 @@
                     </tr>
                     <tr>
                         <td><label for="list">How do did you hear of us?</label></td>
-                        <td>
+                    <td>
+                        <listbox>
                             <select>
                                 <option value="google">Google</option>
                                 <option value="facebook">Facebook</option>
                                 <option value="youtube">Youtobe</option>
                                 <option value="Khac">Khác</option>
                             </select>
-                        </td>
+                        </listbox>
+                    </td>
                     </tr>
                     <tr>
                         <td><label for="checkbox">Newsletter</label></td>
