--- a/HTML/Tuan02/Bai14.html
+++ b/HTML/Tuan02/Bai14.html
@@ -27,7 +27,7 @@
                             <select>
                                 <option value="google">Google</option>
                                 <option value="facebook">Facebook</option>
-                                <option value="youtube">Youtobe</option>
+                                <option value="youtube">Youtube</option>
                                 <option value="Khac">Khác</option>
                             </select>
                         </listbox>
