--- a/HTML/Tuan02/Bai17/Bai17a.html
+++ b/HTML/Tuan02/Bai17/Bai17a.html
@@ -154,6 +154,7 @@
             <br>
             <tr>
                     <center><input type="button" value="Send Form">
+                    &emsp;
                     <input type="button" value="Clear Form"></center>
             </tr>
 </table>
