--- a/HTML/Tuan02/Bai17/Bai17b.html
+++ b/HTML/Tuan02/Bai17/Bai17b.html
@@ -20,8 +20,13 @@
                 <br>
                 <br>
                 <tr>
-                    <label for="userName">Username</label>
+                    <label for="userName">Username:</label>
                     <input type="text" name="txtUsername" id="userName">
+                </tr>
+                <br>
+                <br>
+                <tr>
+                    
                 </tr>
             </table>
         </div>
