--- a/BTVN/1_ProductListing/1_ProductListing/btvn.html
+++ b/BTVN/1_ProductListing/1_ProductListing/btvn.html
@@ -55,7 +55,10 @@
             <p>
                 <h3>Product title</h3>
                 <p>Labore sint ipsum dolore mollit</p>
-                <img src="Button 1 (2).png" alt="">
+                <div id="Left2"><b>$32</b>
+                    <div id="Left3" style="font-size: 20px;color: darkgray;">$42</div>
+                    <div id="container11"><img src="Button 1 (2).png" alt=""></div>
+                </div>
             </p>
         </div>
         <div>
@@ -63,7 +66,10 @@
             <p>
                 <h3>Product title</h3>
                 <p>Labore sint ipsum dolore mollit</p>
-                <img src="Button 1 (2).png" alt="">
+                <div id="Left2"><b>$22</b>
+                    <div id="Left3" style="font-size: 20px;color: darkgray;">$28</div>
+                    <div id="container11"><img src="Button 1 (2).png" alt=""></div>
+                </div>
             </p>
         </div>
         <div>
@@ -73,7 +79,10 @@
                 <p>
                     Labore sint ipsum dolore mollit
                 </p>
-                <img src="Button 1 (2).png" alt="">
+                <div id="Left2"><b>$18</b>
+                    <div id="Left3" style="font-size: 20px;color: darkgray;">$26</div>
+                    <div id="container11"><img src="Button 1 (2).png" alt=""></div>
+                </div>
             </p>
         </div>
         <div>
@@ -83,7 +92,10 @@
                 <p>
                     Labore sint ipsum dolore mollit
                 </p>
-                <img src="Button 1 (2).png" alt="">
+                <div id="Left2"><b>$48</b>
+                    <div id="Left3" style="font-size: 20px;color: darkgray;">$56</div>
+                    <div id="container11"><img src="Button 1 (2).png" alt=""></div>
+                </div>
             </p>
         </div>
     </div>
@@ -96,7 +108,9 @@
                 <p>
                     Labore sint ipsum dolore mollit
                 </p>
-                <img src="Button 1 (2).png" alt="">
+                <div id="Left2"><b>$31</b>
+                    <div id="container11"><img src="Button 1 (2).png" alt=""></div>
+                </div>
             </p>
         </div>
         <div>
@@ -106,7 +120,10 @@
                 <p>
                     Labore sint ipsum dolore mollit
                 </p>
-                <img src="Button 1 (2).png" alt="">
+                <div id="Left2"><b>$40</b>
+                    <div id="Left3" style="font-size: 20px;color: darkgray;">$48</div>
+                    <div id="container11"><img src="Button 1 (2).png" alt=""></div>
+                </div>
             </p>
         </div>
         <div>
@@ -116,7 +133,9 @@
                 <p>
                     Labore sint ipsum dolore mollit
                 </p>
-                <img src="Button 1 (2).png" alt="">
+                <div id="Left2"><b>$26</b>
+                    <div id="container11"><img src="Button 1 (2).png" alt=""></div>
+                </div>
             </p>
         </div>
         <div>
@@ -126,7 +145,9 @@
                 <p>
                     Labore sint ipsum dolore mollit
                 </p>
-                <img src="Button 1 (2).png" alt="">
+                <div id="Left2"><b>$18</b>
+                    <div id="container11"><img src="Button 1 (2).png" alt=""></div>
+                </div>
             </p>
         </div>
     </div>
@@ -139,7 +160,9 @@
                 <p>
                     Labore sint ipsum dolore mollit
                 </p>
-                <img src="Button 1 (2).png" alt="">
+                <div id="Left2"><b>$52</b>
+                    <div id="container11"><img src="Button 1 (2).png" alt=""></div>
+                </div>
             </p>
         </div>
         <div>
@@ -149,7 +172,10 @@
                 <p>
                     Labore sint ipsum dolore mollit
                 </p>
-                <img src="Button 1 (2).png" alt="">
+                <div id="Left2"><b>$47</b>
+                    <div id="Left3" style="font-size: 20px;color: darkgray;">$42</div>
+                    <div id="container11"><img src="Button 1 (2).png" alt=""></div>
+                </div>
             </p>
         </div>
         <div>
@@ -159,7 +185,9 @@
                 <p>
                     Labore sint ipsum dolore mollit
                 </p>
-                <img src="Button 1 (2).png" alt="">
+                <div id="Left2"><b>$44</b>
+                    <div id="container11"><img src="Button 1 (2).png" alt=""></div>
+                </div>
             </p>
         </div>
         <div>
@@ -169,7 +197,10 @@
                 <p>
                     Labore sint ipsum dolore mollit
                 </p>
-                <img src="Button 1 (2).png" alt="">
+                <div id="Left2"><b>$32</b>
+                    <div id="Left3" style="font-size: 20px;color: darkgray;">$42</div>
+                    <div id="container11"><img src="Button 1 (2).png" alt=""></div>
+                </div>
             </p>
         </div>
     </div>
