--- a/BTVN/1_ProductListing/1_ProductListing/btvn.html
+++ b/BTVN/1_ProductListing/1_ProductListing/btvn.html
@@ -42,8 +42,8 @@
             <div>Body</div>
         </div>
         <div id="Right1">
-            <div id="sear">&#128269 Search Product...</div>
-            <div id="sor">Sort By&#8801;</div>
+            <input type="text" id="sear" placeholder="&#128269 Search Product..."></input>
+            <div id="sor">Sort By &#8801;</div>
         </div>
 
     </div>
