--- a/CSS/Tuan03/Bai1/Bai1.html
+++ b/CSS/Tuan03/Bai1/Bai1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Bai 1 - CSS</title>
-    <link rel="stylesheet" type="text/css" href="bai1.css">
+    <link rel="stylesheet" href="Bai1.css">
 </head>
 
 <body>
