--- a/CSS/Tuan03/Bai2/Bai2a.html
+++ b/CSS/Tuan03/Bai2/Bai2a.html
@@ -43,3 +43,8 @@
 </body>
 
 </html>
+<!--Ngoài ra, 
+	Thuộc tính direction được sử dụng để thiết lập hướng cho đoạn văn bản.
+	Thuộc tính letter-spacing được sử dụng để thêm hoặc bớt khoảng cách giữa các chữ cái trong một từ.
+	Thuộc tính word-spacing được sử dụng để tăng hoặc giảm khoảng cách giữa các từ trong một câu.
+-->
