--- a/Tuan08/ONTAP_KIEMTRA/html/HD1.html
+++ b/Tuan08/ONTAP_KIEMTRA/html/HD1.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="col-md-12">
             <header>
-                <img src="../img/banner-ck.png" alt="" />
+                <img src="../img/banner.png" alt="" />
             </header>
         </div>
         <div class="col-md-12">
@@ -58,8 +58,8 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">X</button>
                     <h1 style="text-align: center">THÔNG TIN TOUR</h1>
+                    <button type="button" class="close" data-dismiss="modal">X</button>
                 </div>
                 <div class="modal-body">
                     <form role="form" class="form-horizontal">
